--- a/package.json
+++ b/package.json
@@ -5,10 +5,19 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && node esbuild.config.js",
+    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "pm2:start": "pm2 start ecosystem.config.cjs",
+    "pm2:start:dev": "pm2 start ecosystem.config.cjs --only egypt-express-tvl-dev",
+    "pm2:start:prod": "pm2 start ecosystem.config.cjs --only egypt-express-tvl --env production",
+    "pm2:stop": "pm2 stop ecosystem.config.cjs",
+    "pm2:restart": "pm2 restart ecosystem.config.cjs",
+    "pm2:delete": "pm2 delete ecosystem.config.cjs",
+    "pm2:logs": "pm2 logs",
+    "pm2:monit": "pm2 monit",
+    "pm2:status": "pm2 status"
   },
   "dependencies": {
     "@faker-js/faker": "^9.8.0",
